# pymatt

./: .env-sample  .env.example  .gitignore  README.md  environment.py  matt.py  pyproject.toml  requirements-dev.txt  requirements.txt  rps.py  rps_contracts.py  setup.py  utils.py  vault.py  vault_contracts.py
.github/workflows/: run-tests.yml
btctools/: _serialize.py  block.py  key.py  psbt.py  tx.py
docs/: README.md  checkcontractverify.md  contracts.md  matt.md
examples/: fund.sh  init.sh
examples/fraud/: fraud_contracts.py
examples/game256/: README.md  game256_contracts.py
examples/ram/: README.md  ram.py  ram_contracts.py
examples/rps/: README.md  rps.py  rps_contracts.py
examples/vault/: .gitignore  README.md  minivault_contracts.py  vault.py  vault_contracts.py
examples/vault/scripts/: normal-1-input-3-outputs.txt  normal-with-revault-3-inputs.txt  recover-from-trigger-1-input.txt  recover-from-vault-1-input.txt
matt/: __init__.py  argtypes.py  contracts.py  environment.py  manager.py  merkle.py  script_helpers.py  utils.py
matt/hub/: README.md  fraud.py
src/matt/: __init__.py  contracts.py  manager.py  script_helpers.py
src/matt/btctools/: _script.py  common.py  errors.py  messages.py  script.py
test_utils/: __init__.py
tests/: conftest.py  test_fraud.py  test_minivault.py  test_ram.py  test_rps.py  test_vault.py
tests/test_utils/: __init__.py  utxograph.py
