[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
name = "matt"
version = "0.0.1"
authors = [
    {name = "Salvatore Ingala", email = "salvatoshi@protonmail.com"},
]
description = "Merkleize All The Things"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["covenant", "smart contracts", "bitcoin"]
license = { file = "LICENSE" }
dependencies = [
    'typing_extensions >= 4.9.0'
]
