[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]

[project]
authors = [
    {name = 'Salvatore Ingala', email = 'salvatoshi@protonmail.com'},
]
dependencies = [
  'typing_extensions >= 4.9.0'
]
description = 'Merkleize All The Things'
keywords = ['covenant', 'smart contracts', 'bitcoin']
license = { file = 'LICENSE' }
name = 'matt'
readme = 'README.md'
requires-python = '>=3.8'
version = '0.0.1'
