[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
authors = [
  {name = 'Salvatore Ingala', email = 'salvatoshi@protonmail.com'},
]
dependencies = [
  'typing_extensions >= 4.9.0'
]
description = 'Merkleize All The Things'
keywords = ['covenant', 'smart contracts', 'bitcoin']
license = { file = 'LICENSE' }
name = 'matt'
readme = 'README.md'
requires-python = '>=3.8'
version = '0.0.1'


[project.optional-dependencies]
ram = [
  'prompt-toolkit>=3.0.31, <3.1',
  'python-dotenv ==0.13.0',
]
rps = [
  'python-dotenv ==0.13.0',
]
vault = [
  'prompt-toolkit>=3.0.31, <3.1',
  'python-dotenv ==0.13.0',
]


[tool.uv]
dev-dependencies = [
  'bokeh >=3.1.0,<4',
  'networkx >=3.1,<4',
  'numpy >=1.24,<2',
  'pytest >=6.2,<7',
]
